--- a/angular.json
+++ b/angular.json
@@ -3,6 +3,7 @@
   "version": 2,
   "projects": {
     "analog-app": "apps/analog-app",
-    "analog-app-e2e": "apps/analog-app-e2e"
+    "analog-app-e2e": "apps/analog-app-e2e",
+    "vite-plugin-angular": "libs/vite-plugin-angular"
   }
 }
