--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -4,65 +4,20 @@
   "prefix": "analogjs",
   "targets": {
     "build": {
-      "executor": "@angular-devkit/build-angular:browser",
+      "executor": "nx:run-commands",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/analog-app",
-        "index": "apps/analog-app/src/index.html",
-        "main": "apps/analog-app/src/main.ts",
-        "polyfills": "apps/analog-app/src/polyfills.ts",
-        "tsConfig": "apps/analog-app/tsconfig.app.json",
-        "assets": [
-          "apps/analog-app/src/favicon.ico",
-          "apps/analog-app/src/assets"
-        ],
-        "styles": ["apps/analog-app/src/styles.css"],
-        "scripts": []
-      },
-      "configurations": {
-        "production": {
-          "budgets": [
-            {
-              "type": "initial",
-              "maximumWarning": "500kb",
-              "maximumError": "1mb"
-            },
-            {
-              "type": "anyComponentStyle",
-              "maximumWarning": "2kb",
-              "maximumError": "4kb"
-            }
-          ],
-          "fileReplacements": [
-            {
-              "replace": "apps/analog-app/src/environments/environment.ts",
-              "with": "apps/analog-app/src/environments/environment.prod.ts"
-            }
-          ],
-          "outputHashing": "all"
-        },
-        "development": {
-          "buildOptimizer": false,
-          "optimization": false,
-          "vendorChunk": true,
-          "extractLicenses": false,
-          "sourceMap": true,
-          "namedChunks": true
-        }
-      },
-      "defaultConfiguration": "production"
+        "outputPath": "../../dist/apps/analog-app",
+        "command": "vite build",
+        "cwd": "apps/analog-app"
+      }
     },
     "serve": {
-      "executor": "@angular-devkit/build-angular:dev-server",
-      "configurations": {
-        "production": {
-          "browserTarget": "analog-app:build:production"
-        },
-        "development": {
-          "browserTarget": "analog-app:build:development"
-        }
-      },
-      "defaultConfiguration": "development"
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "apps/analog-app",
+        "command": "vite"
+      }
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
