--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "prettier": "^2.6.2",
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "vite": "^2.9.13"
   }
 }
