--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@analogjs/vite-plugin-angular": ["libs/vite-plugin-angular/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
