chore: config cleanup

--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -7,7 +7,7 @@
       "executor": "nx:run-commands",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "../../dist/apps/analog-app",
+        "outputPath": "dist/apps/analog-app",
         "command": "vite build",
         "cwd": "apps/analog-app"
       }
