--- a/apps/analog-app/tsconfig.editor.json
+++ b/apps/analog-app/tsconfig.editor.json
@@ -2,6 +2,6 @@
   "extends": "./tsconfig.json",
   "include": ["**/*.ts"],
   "compilerOptions": {
-    "types": ["jest", "node"]
+    "types": ["node", "vitest/globals"]
   }
 }
