test: fix tests for create-analog

--- a/packages/create-analog/project.json
+++ b/packages/create-analog/project.json
@@ -11,15 +11,12 @@
         "command": "cp -r packages/create-analog dist/packages/create-analog"
       }
     },
-    "exec": {
+    "test": {
       "executor": "nx:run-commands",
       "outputs": ["{options.outputPath}"],
       "options": {
         "cwd": "packages/create-analog",
-        "commands": [
-          { "command": "yarn" },
-          { "command": "node ./index.js" }
-        ]
+        "command": "vitest --dir __tests__"
       }
     }
   },
