chore: update test/build scripts in package.json

--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "start": "nx serve",
-    "build": "nx run-many build --all",
-    "test": "nx test",
+    "build": "nx run-many --target build --all",
+    "test": "nx run-many --target test --all",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
   "keywords": [
