--- a/packages/vite-plugin-angular/package.json
+++ b/packages/vite-plugin-angular/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@analogjs/vite-plugin-angular",
   "description": "Vite Plugin for Angular",
-  "version": "0.1.1",
+  "version": "0.2.0-alpha.0",
   "keywords": [
     "vite-plugin",
     "angular"
