--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -12,6 +12,56 @@
         "cwd": "apps/analog-app"
       }
     },
+    "build-ng": {
+      "builder": "@angular-devkit/build-angular:browser",
+      "options": {
+        "outputPath": "dist/apps/analog-app-ng",
+        "index": "apps/analog-app/src/index.html",
+        "main": "apps/analog-app/src/main.ts",
+        "polyfills": "apps/analog-app/src/polyfills.ts",
+        "tsConfig": "apps/analog-app/tsconfig.app.json",
+        "assets": [
+          "apps/analog-app/src/favicon.ico",
+          "apps/analog-app/src/assets"
+        ],
+        "styles": [
+          "apps/analog-app/src/styles.css"
+        ],
+        "scripts": []
+      },
+      "configurations": {
+        "production": {
+          "budgets": [
+            {
+              "type": "initial",
+              "maximumWarning": "500kb",
+              "maximumError": "1mb"
+            },
+            {
+              "type": "anyComponentStyle",
+              "maximumWarning": "2kb",
+              "maximumError": "4kb"
+            }
+          ],
+          "fileReplacements": [
+            {
+              "replace": "apps/analog-app/src/environments/environment.ts",
+              "with": "apps/analog-app/src/environments/environment.prod.ts"
+            }
+          ],
+          "outputHashing": "all"
+        },
+        "development": {
+          "buildOptimizer": false,
+          "optimization": false,
+          "vendorChunk": true,
+          "extractLicenses": false,
+          "sourceMap": true,
+          "namedChunks": true
+        }
+      },
+      "defaultConfiguration": "production"
+    },    
     "serve": {
       "executor": "nx:run-commands",
       "options": {
@@ -19,6 +69,18 @@
         "command": "vite"
       }
     },
+    "serve-ng": {
+      "builder": "@angular-devkit/build-angular:dev-server",
+      "configurations": {
+        "production": {
+          "browserTarget": "analog-app:build-ng:production"
+        },
+        "development": {
+          "browserTarget": "analog-app:build-ng:development"
+        }
+      },
+      "defaultConfiguration": "development"
+    },    
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
