--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -13,7 +13,7 @@
       }
     },
     "build-ng": {
-      "builder": "@angular-devkit/build-angular:browser",
+      "builder": "@angular-devkit/build-angular:browser-esbuild",
       "options": {
         "outputPath": "dist/apps/analog-app-ng",
         "index": "apps/analog-app/src/index.html",
