feat(vite-plugin-angular): add optimizer plugin for builds
The plugin adds build configuration and transforms the mjs files
for better treeshaking to bring production builds on par with
the Angular Webpack build

--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -13,7 +13,7 @@
       }
     },
     "build-ng": {
-      "builder": "@angular-devkit/build-angular:browser-esbuild",
+      "builder": "@angular-devkit/build-angular:browser",
       "options": {
         "outputPath": "dist/apps/analog-app-ng",
         "index": "apps/analog-app/src/index.html",
