--- a/packages/create-analog/template-angular-v14/package.json
+++ b/packages/create-analog/template-angular-v14/package.json
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "@analogjs/vite-plugin-angular": "latest",
-    "@angular-devkit/build-angular": "14.0.0",
+    "@angular-devkit/build-angular": "^14.0.3",
     "@angular/cli": "~14.0.3",
     "@angular/compiler-cli": "^14.0.0",
     "typescript": "~4.7.2",
