--- a/packages/create-analog/template-angular-v14/package.json
+++ b/packages/create-analog/template-angular-v14/package.json
@@ -7,7 +7,8 @@
     "start": "npm run dev",
     "build": "vite build",
     "watch": "vite build --watch",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "vite optimize"
   },
   "private": true,
   "dependencies": {
