feat(vite-plugin-angular): add support for Vitest and update create-analog template app

--- a/apps/analog-app/tsconfig.spec.json
+++ b/apps/analog-app/tsconfig.spec.json
@@ -2,9 +2,14 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
-    "module": "commonjs",
     "types": ["node", "vitest/globals"]
   },
-  "files": ["src/test-setup.ts"],
-  "include": ["vite.config.ts", "**/*.test.ts", "**/*.spec.ts", "**/*.d.ts"]
+  "files": [
+    "src/test-setup.ts",
+    "src/polyfills.ts"
+  ],
+  "include": [
+    "src/**/*.spec.ts",
+    "**/*.d.ts"
+  ]
 }
