--- a/packages/vite-plugin-angular/tsconfig.lib.json
+++ b/packages/vite-plugin-angular/tsconfig.lib.json
@@ -1,6 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "module": "es2015",
     "outDir": "../../dist/out-tsc",
     "declaration": true,
     "types": []
