chore: add pre-commit hook

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "nx serve",
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
+    "prepare": "git config core.hookspath .githooks",
     "start": "nx serve",
     "build": "nx run-many --target build --all",
     "test": "nx run-many --target test --all",
@@ -62,6 +63,7 @@
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "kolorist": "^1.5.1",
+    "lint-staged": "^13.0.3",
     "minimist": "^1.2.6",
     "nx": "14.4.2",
     "prettier": "^2.6.2",
