chore: build vite-plugin-angular before serve and update references

--- a/nx.json
+++ b/nx.json
@@ -28,6 +28,9 @@
   "targetDefaults": {
     "build": {
       "dependsOn": ["^build"]
+    },
+    "serve": {
+      "dependsOn": ["^build"]
     }
   },
   "generators": {
