--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@nrwl/eslint-plugin-nx": "14.4.2",
     "@nrwl/linter": "14.4.2",
     "@nrwl/workspace": "14.4.2",
+    "@nx-plus/docusaurus": "14.1.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
