docs: generate `docs-app` Docusaurus website

--- a/angular.json
+++ b/angular.json
@@ -5,6 +5,7 @@
     "analog-app": "apps/analog-app",
     "analog-app-e2e": "apps/analog-app-e2e",
     "create-analog": "packages/create-analog",
+    "docs-app": "apps/docs-app",
     "vite-plugin-angular": "packages/vite-plugin-angular"
   }
 }
