--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,7 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@analogjs/vite-plugin-angular": ["packages/vite-plugin-angular/src/index.ts"]
+      "@analogjs/vite-plugin-angular": [
+        "packages/vite-plugin-angular/src/index.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "tmp"]
