--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,11 @@ on:
       - main
   pull_request: {}
 
+env:
+  DOCS_APP_ARTIFACT_NAME: docs-app
+  DOCS_APP_PATH: dist/apps/docs-app/
+  NODE_OPTIONS: --max-old-space-size=6144
+
 jobs:
   checks:
     runs-on: ubuntu-latest
@@ -21,3 +26,55 @@ jobs:
         run: yarn build
       - name: Test
         run: yarn test
+      - name: Upload docs website
+        # Runs on merge to the `main` branch
+        if: github.event_name == 'push' && github.ref_name == 'main'
+        uses: actions/upload-artifact@v3
+        with:
+          if-no-files-found: error
+          name: ${{ env.DOCS_APP_ARTIFACT_NAME }}
+          path: ${{ env.DOCS_APP_PATH }}
+          retention-days: 1
+
+  deploy-docs:
+    name: '[Merge] Deploy docs website'
+    needs: checks
+    # Runs on merge to the `main` branch
+    if: github.event_name == 'push' && github.ref_name == 'main'
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deploy.outputs.page_url }}
+    # Authorize deployment to GitHub Pages
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
+    concurrency:
+      # Group concurrency on workflow, then:
+      # - Is merge run? Group on branch name (`refs/heads/main`)
+      # - Is pull request? Group on pull request branch name, for example `feat/add-awesome-feature`
+      group: >-
+        ${{ github.workflow }}-deploy-docs-${{
+          github.event_name == 'push'
+            && github.ref
+            || github.head_ref
+        }}
+      # Run merge workflows in sequence to prevent parallel deployments and releases
+      # Cancel stale pull request runs in progress for the same branch
+      cancel-in-progress: ${{ github.event_name != 'push' }}
+    steps:
+      - name: Download docs website
+        uses: actions/download-artifact@v3
+        with:
+          name: ${{ env.DOCS_APP_ARTIFACT_NAME }}
+          path: ${{ env.DOCS_APP_PATH }}
+      - name: Set up GitHub Pages
+        uses: actions/configure-pages@v1
+      - name: Upload GitHub Pages-compatible tarball
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: ${{ env.DOCS_APP_PATH }}
+      - name: Deploy docs website tarball
+        id: deploy
+        uses: actions/deploy-pages@v1
