--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
   },
   "private": true,
   "workspaces": [
-    "apps/**",
-    "libs/**"
+    "apps/docs-app"
   ],
   "dependencies": {
     "@angular/animations": "~14.0.0",
