--- a/package.json
+++ b/package.json
@@ -26,9 +26,6 @@
     "url": "https://github.com/analogjs/analog.git"
   },
   "private": true,
-  "workspaces": [
-    "apps/docs-app"
-  ],
   "dependencies": {
     "@angular/animations": "~14.0.0",
     "@angular/common": "~14.0.0",
@@ -51,6 +48,10 @@
     "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "~14.0.0",
     "@angular/language-service": "~14.0.0",
+    "@docusaurus/core": "2.0.1",
+    "@docusaurus/module-type-aliases": "2.0.1",
+    "@docusaurus/preset-classic": "2.0.1",
+    "@mdx-js/react": "1.6.22",
     "@nrwl/cli": "14.4.2",
     "@nrwl/cypress": "14.4.2",
     "@nrwl/eslint-plugin-nx": "14.4.2",
@@ -60,6 +61,7 @@
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
+    "clsx": "1.2.1",
     "conventional-changelog": "^1.1.4",
     "conventional-changelog-cli": "^1.3.21",
     "cypress": "^9.1.0",
@@ -71,10 +73,13 @@
     "minimist": "^1.2.6",
     "nx": "14.4.2",
     "prettier": "^2.6.2",
+    "prism-react-renderer": "1.3.5",
     "prompts": "^2.4.2",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "rollup-plugin-visualizer": "^5.7.1",
     "ts-node": "~10.8.0",
-    "typescript": "~4.7.2",
+    "typescript": "~4.7.4",
     "vite": "^3.0.4",
     "vitest": "^0.21.0",
     "webpack-bundle-analyzer": "^4.5.0"
