--- a/apps/docs-app/package.json
+++ b/apps/docs-app/package.json
@@ -14,6 +14,18 @@
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc"
   },
+  "dependencies": {
+    "@docusaurus/core": "2.0.1",
+    "@docusaurus/preset-classic": "2.0.1",
+    "@mdx-js/react": "1.6.22",
+    "clsx": "1.2.1",
+    "prism-react-renderer": "1.3.5",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
+  },
+  "devDependencies": {
+    "@docusaurus/module-type-aliases": "2.0.1"
+  },
   "browserslist": {
     "production": [
       ">0.5%",
