--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "url": "https://github.com/analogjs/analog.git"
   },
   "private": true,
+  "workspaces": [
+    "apps/docs-app"
+  ],
   "dependencies": {
     "@angular/animations": "~14.0.0",
     "@angular/common": "~14.0.0",
@@ -48,10 +51,6 @@
     "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "~14.0.0",
     "@angular/language-service": "~14.0.0",
-    "@docusaurus/core": "2.0.1",
-    "@docusaurus/module-type-aliases": "2.0.1",
-    "@docusaurus/preset-classic": "2.0.1",
-    "@mdx-js/react": "1.6.22",
     "@ngtools/webpack": "~14.0.0",
     "@nrwl/cli": "14.4.2",
     "@nrwl/cypress": "14.4.2",
@@ -74,10 +73,7 @@
     "minimist": "^1.2.6",
     "nx": "14.4.2",
     "prettier": "^2.6.2",
-    "prism-react-renderer": "1.3.5",
     "prompts": "^2.4.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
     "rollup-plugin-visualizer": "^5.7.1",
     "ts-node": "~10.8.0",
     "typescript": "~4.7.4",
