feat(astro-integration-angular): move ng_astro to analog monorepo
This is the new home for ng_astro - angular astros integration

feat(astro-integration-angular): move over ng_astro to analog)

chore(integration-angular): generate NX Lib for integration-angular Package

Copy over the integration files from ng-astro repo

chore: run yarn install

chore: restructure the lib

chore: ensure astro plugin is generated as publishable

chore: copy over the demo astro blog from astro-ng

chore: refactor astro-integration-angular to simplify it

Revert "chore: copy over the demo astro blog from astro-ng"

This reverts commit 2938ec4fbe7c3521c3e0fa8d0d815686bfad0f7a.

--- a/angular.json
+++ b/angular.json
@@ -5,6 +5,7 @@
     "analog-app": "apps/analog-app",
     "analog-app-e2e-cypress": "apps/analog-app-e2e-cypress",
     "analog-app-e2e-playwright": "apps/analog-app-e2e-playwright",
+    "astro-integration-angular": "packages/astro-integration-angular",
     "create-analog": "packages/create-analog",
     "docs-app": "apps/docs-app",
     "vite-plugin-angular": "packages/vite-plugin-angular"
