docs: mark `CONTRIBUTING.md` as implicit dependency for the `docs-app` project
This is necessary for Nx to detect it affecting the project as the Markdown document is outside of the project root.

--- a/nx.json
+++ b/nx.json
@@ -11,6 +11,7 @@
     "packageManager": "yarn"
   },
   "implicitDependencies": {
+    "CONTRIBUTING.md": ["docs-app"],
     "package.json": {
       "dependencies": "*",
       "devDependencies": "*"
