--- a/apps/analog-app-e2e/project.json
+++ b/apps/analog-app-e2e/project.json
@@ -4,15 +4,17 @@
   "projectType": "application",
   "targets": {
     "e2e": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "",
+        "command": "start-server-and-test 'nx serve analog-app' 3000 'nx e2e-cypress analog-app-e2e'"
+      }
+    },
+    "e2e-cypress": {
       "executor": "@nrwl/cypress:cypress",
       "options": {
         "cypressConfig": "apps/analog-app-e2e/cypress.json",
-        "devServerTarget": "analog-app:serve:development"
-      },
-      "configurations": {
-        "production": {
-          "devServerTarget": "analog-app:serve:production"
-        }
+        "baseUrl": "http://localhost:3000"
       }
     },
     "lint": {
