--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -64,7 +64,17 @@
       "executor": "nx:run-commands",
       "options": {
         "cwd": "apps/analog-app",
-        "command": "vite"
+        "command": "vite --strict-port"
+      }
+    },
+    "e2e": {
+      "executor": "nx:run-commands",
+      "options": {
+        "color": true,
+        "commands": ["vite --strict-port"],
+        "cwd": "apps/analog-app",
+        "parallel": true,
+        "readyWhen": "ready in"
       }
     },
     "serve-ng": {
