--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prepare": "git config core.hookspath .githooks",
     "start": "nx serve",
     "build": "nx run-many --target build --all",
+    "e2e": "nx run-many --target e2e --all",
     "test": "nx run-many --target test --all",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0"
   },
