--- a/apps/analog-app-e2e/project.json
+++ b/apps/analog-app-e2e/project.json
@@ -3,15 +3,27 @@
   "sourceRoot": "apps/analog-app-e2e/src",
   "projectType": "application",
   "targets": {
-    "e2e": {
+    "cypress": {
       "executor": "@nrwl/cypress:cypress",
       "options": {
         "cypressConfig": "apps/analog-app-e2e/cypress.json",
-        "devServerTarget": "analog-app:serve:development"
+        "baseUrl": "http://localhost:3000"
       },
       "configurations": {
-        "production": {
-          "devServerTarget": "analog-app:serve:production"
+        "watch": {
+          "watch": true
+        }
+      }
+    },
+    "e2e": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "",
+        "command": "start-server-and-test 'nx serve analog-app' 3000 'nx cypress analog-app-e2e'"
+      },
+      "configurations": {
+        "watch": {
+          "command": "start-server-and-test 'nx serve analog-app' 3000 'nx cypress analog-app-e2e --configuration=watch'"
         }
       }
     },
