--- a/packages/create-analog/project.json
+++ b/packages/create-analog/project.json
@@ -8,7 +8,7 @@
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/packages/create-analog",
-        "command": "mkdir -p dist/packages/create-analog && cp -r packages/create-analog dist/packages/create-analog"
+        "command": "cpy packages/create-analog/**/*.* dist/packages/create-analog"
       }
     },
     "test": {
