--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "nx serve",
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
-    "prepare": "git config core.hookspath .githooks",
+    "prepare": "git config core.hookspath .githooks && chmod +x .githooks/*",
     "start": "nx serve",
     "build": "nx run-many --target build --all",
     "e2e": "nx run-many --target e2e --all",
@@ -54,6 +54,8 @@
     "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "~14.0.0",
     "@angular/language-service": "~14.0.0",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@ngtools/webpack": "~14.0.0",
     "@nrwl/cli": "14.4.2",
     "@nrwl/cypress": "14.4.2",
