--- a/.github/ISSUE_TEMPLATE/02-feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/02-feature-request.yml
@@ -1,5 +1,5 @@
 name: Feature Request
-description: Request a new or improve a feature in Analogjs
+description: Request a new or improved a feature in Analog
 labels: [enhancement]
 
 body:
