--- a/.github/ISSUE_TEMPLATE/02-feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/02-feature-request.yml
@@ -6,7 +6,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        Thanks for help us to grow. ❤️
+        Thanks for helping us grow. ❤️
         If do you like Analogjs enough please consider support through [sponsoring](https://github.com/sponsors/brandonroberts) 💖
         Please search GitHub for a similar [issue](https://github.com/analogjs/analog/issues) or [PR](https://github.com/analogjs/analog/issues)  before submitting a new issue.
   - type: dropdown
