chore(docs): remove js word, Is just Analog (#41)

--- a/.github/ISSUE_TEMPLATE/01-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/01-bug-report.yml
@@ -7,7 +7,7 @@ body:
     attributes:
       value: |
         Thanks for helping us grow. ❤️
-        If do you like Analogjs enough please consider support through [sponsoring](https://github.com/sponsors/brandonroberts) 💖
+        If do you like Analog enough please consider support through [sponsoring](https://github.com/sponsors/brandonroberts) 💖
         Please search GitHub for a similar [issue](https://github.com/analogjs/analog/issues) or [PR](https://github.com/analogjs/analog/issues)  before submitting a new issue.
 
   - type: textarea
