--- a/.github/ISSUE_TEMPLATE/02-feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/02-feature-request.yml
@@ -7,7 +7,7 @@ body:
     attributes:
       value: |
         Thanks for helping us grow. ❤️
-        If do you like Analogjs enough please consider support through [sponsoring](https://github.com/sponsors/brandonroberts) 💖
+        If do you like Analog enough please consider support through [sponsoring](https://github.com/sponsors/brandonroberts) 💖
         Please search GitHub for a similar [issue](https://github.com/analogjs/analog/issues) or [PR](https://github.com/analogjs/analog/issues)  before submitting a new issue.
   - type: dropdown
     id: type_bug
@@ -25,7 +25,7 @@ body:
     id: information
     attributes:
       label: Information
-      description: Tell us what you want to be added to Analogjs
+      description: Tell us what you want to be added to Analog
     validations:
       required: true
 
