chore: playwright setup

--- a/angular.json
+++ b/angular.json
@@ -4,6 +4,7 @@
   "projects": {
     "analog-app": "apps/analog-app",
     "analog-app-e2e-cypress": "apps/analog-app-e2e-cypress",
+    "analog-app-e2e-playwright": "apps/analog-app-e2e-playwright",
     "create-analog": "packages/create-analog",
     "docs-app": "apps/docs-app",
     "vite-plugin-angular": "packages/vite-plugin-angular"
