--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,9 @@ stats.html
 # Generated Docusaurus files
 .docusaurus/
 .cache-loader/
+
+# Playwright
+
+**/test-results/
+**/playwright-report/
+**/playwright/.cache/
