test: run e2e serial
Otherwise the same port will be used/closed

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prepare": "git config core.hookspath .githooks",
     "start": "nx serve",
     "build": "nx run-many --target build --all",
-    "e2e": "nx run-many --target e2e --all",
+    "e2e": "nx run-many --target e2e --all --parallel=1",
     "test": "nx run-many --target test --all",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "contributors:add": "all-contributors add",
