test(astro-integration-angular): add test for astro integration

--- a/packages/astro-integration-angular/jest.config.json
+++ b/packages/astro-integration-angular/jest.config.json
@@ -12,7 +12,8 @@
   "moduleFileExtensions": [
     "ts",
     "js",
-    "html"
+    "html",
+    "json"
   ],
   "coverageDirectory": "../../coverage/packages/astro-integration-angular"
 }
