docs(astro-integration-angular): update package.json for the plugin

--- a/packages/astro-integration-angular/package.json
+++ b/packages/astro-integration-angular/package.json
@@ -15,6 +15,22 @@
     "client.js",
     "server.js"
   ],
+  "keywords": [
+    "angular",
+    "astro",
+    "astro-integration",
+    "astro-component",
+    "renderer"
+  ],
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/analogjs/analog/issues"
+  },
+  "homepage": "https://github.com/analogjs/analog#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/analogjs/analog.git"
+  },
   "dependencies": {
     "@analogjs/vite-plugin-angular": "^0.2.0-alpha.0"
   },
